    maybePrintStats bug (Zoran Dimitrijevic via raviprak)

    HADOOP-11870. [JDK8] AuthenticationFilter, CertificateUtil,
    SignerSecretProviders, KeyAuthorizationKeyProvider Javadoc issues (rkanter)

    HADOOP-11881. test-patch.sh javac result is wildly wrong (Kengo Seki via
    aw)

    HADOOP-11821. Fix findbugs warnings in hadoop-sls.
    (Brahma Reddy Battula via aajisaka)

Release 2.7.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

    HADOOP-11891. OsSecureRandom should lazily fill its reservoir (asuresh)

Release 2.7.0 - 2015-04-20

  INCOMPATIBLE CHANGES

    HADOOP-10530 Make hadoop build on Java7+ only (stevel)

  NEW FEATURES

    HADOOP-10987. Provide an iterator-based listing API for FileSystem (kihwal)

    HADOOP-7984. Add hadoop --loglevel option to change log level.
    (Akira AJISAKA via cnauroth)

    HADOOP-9629. Support Windows Azure Storage - Blob as a file system in Hadoop.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovic, Brian Swan, and Min Wei via cnauroth)

    HADOOP-10728. Metrics system for Windows Azure Storage Filesystem.
    (Dexter Bradshaw, Mostafa Elhemali, Xi Fang, Johannes Klein, David Lao,
    Mike Liddell, Chuan Liu, Lengning Liu, Ivan Mitic, Michael Rys,
    Alexander Stojanovich, Brian Swan, and Min Wei via cnauroth)

    HADOOP-8989. hadoop fs -find feature (Jonathan Allen via aw)

    HADOOP-11490. Expose truncate API via FileSystem and shell command.
    (Milan Desai via shv)
